@@ -13,6 +13,7 @@ Device specific changes/fixes
 	* JetiAdapter - remove interpolation of values excluding GPS coordinates 
 	* JetiAdapter - find start index of GPS data to avoid interpolation which disturb GPS track visualization
 	* JetiAdapter - parse time and date and use for synchronization
+	* Core-Telemetry - make GPS coordinates homogeneous to GDE data model
 
 
 Version 3.5.3 - 20 Jan 2022
